--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="header">
 
     <a href="/" class="logo navbar-brand">
-      <img src="../img/Logo.png" alt="logo" />
+      <img src="./img/logo.webp" alt="logo" />
     </a>
     <button type="button" id="Btheme" class="Btheme">
       <i class='bx bxs-moon'></i>
@@ -290,7 +290,7 @@
             <div class="item">
               <div class="card" id="JAVA">
                 <div class="icon">
-                  <img src="../img/java.png" alt="Java" class="img-fluid">
+                  <img src="./img/java.webp" alt="Java" class="img-fluid">
                 </div>
                 <div class="Stitle">
                   <div class="card-body">
@@ -302,7 +302,7 @@
             <div class="item">
               <div class="card" id="C">
                 <div class="icon">
-                  <img src="../img/c-.png" alt="C++" class="img-fluid">
+                  <img src="./img/c.webp" alt="C++" class="img-fluid">
                 </div>
                 <div class="Stitle">
                   <div class="card-body">
