--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <a href="/" class="logo navbar-brand">
       <img src="./img/logo.webp" alt="logo" />
     </a>
-    <button type="button" id="Btheme" class="Btheme">
+    <div id = "headernav">
+          <button type="button" id="Btheme" class="Btheme">
       <i class='bx bxs-moon'></i>
     </button>
     <button type="button" id="leng" data-language="en">
@@ -36,7 +37,7 @@
       <span class="navbar-toggler-icon navbar-dark fs-1 hove"></span>
     </button>
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-md">
 
       <div class="collapse navbar-collapse" id="navbar" data-section="navb">
 
@@ -51,6 +52,8 @@
       </div>
 
     </nav>
+    </div>
+
   </header>
 
   <section class="Home" id="Home">
@@ -120,7 +123,7 @@
                         Who I Am?
                       </h1>
                       <hr />
-                      <p class="card-text my-4" data-section="AboutMe" data-value="description1">
+                      <p class="card-text" data-section="AboutMe" data-value="description1">
                         I am a passionate developer with an insatiable appetite
                         for technology and innovation. My goal is to turn concepts
                         into flawless digital experiences that make life more
@@ -380,7 +383,7 @@
                   <div id="Enlaces">
                     <a href="https://miguelcastilloengineer.vercel.app/" class="bx-Link"><i class='bx bx-link'></i></a>
                     <a href="https://github.com/MangelC25/Portfolio-Website-Miguel-Castillo.git" class="bx-Git"
-                      target="_blank"><i class="bi bi-github"></i></a>
+                      target="_blank"><i class='bx bxl-github' ></i></a>
                   </div>
                 </div>
               </div>
@@ -485,7 +488,6 @@
       autoplayTimeout: 5000,
       autoplayHoverPause: true,
       items: 5,
-      margin: 10,
       responsiveClass: true,
       responsive: {
         0: {
