--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Hi, I'm Miguel Castillo, Front-End Developer">
   <link rel="stylesheet" href="sass-css/Styles.css" />
   <title>Miguel Castillo: Developer and Enginer of System</title>
 
