--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li class="nav-item"><a class="nav-link" href="#About Me" data-section="nav" data-value="2">About Me</a></li>
           <li class="nav-item"><a class="nav-link" href="#Skills" data-section="nav"  data-value="3">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#Projects" data-section="nav" data-value="4">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" id="C" href="#Contact" data-section="nav" data-value="5">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Contact" data-section="nav" data-value="5">Contact</a></li>
         </ul>
 
       </div>
@@ -304,7 +304,7 @@
               </div>
             </div>
             <div class="item">
-              <div class="card" id="C">
+              <div class="card" id="Cm">
                 <div class="icon">
                   <img src="./img/c.webp" alt="C++" class="img-fluid">
                 </div>
