--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/AboutMe.webp" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/AboutMe.webp" class="card-img img-fluid" alt="image1" id="imagen" loading="lazy"/>
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
                   <div class="text-container" id="Description">
                     <div class="card-body border border-0 h">
-                      <h1 class="card-title fw-bold mb-4 text-center my-4" data-section="AboutMe" data-value="Iam">
+                      <h1 class="card-title fw-bold mb-4 text-center my-4" data-section="AboutMe" data-value="Iam" >
                         Who I Am?
                       </h1>
                       <hr />
@@ -140,7 +140,7 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/Education.webp" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/Education.webp" class="card-img img-fluid" alt="image1" id="imagen" loading="lazy"/>
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
@@ -166,7 +166,7 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/Passions.webp" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/Passions.webp" class="card-img img-fluid" alt="image1" id="imagen" loading="lazy"/>
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
@@ -196,7 +196,7 @@
               <div id="Acontenedor">
                 <div class="card text-center border border-0 bg-transparent py-4 text-white align-items-center">
                   <div class="image-container">
-                    <img src="img/Competences.webp" class="card-img img-fluid" alt="image1" id="imagen" />
+                    <img src="img/Competences.webp" class="card-img img-fluid" alt="image1" id="imagen" loading="lazy"/>
                     <span class="circle-spin"></span>
                     <span class="circle-spin2"></span>
                   </div>
