--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  
 </head>
 
 <body>
@@ -294,7 +294,7 @@
             <div class="item">
               <div class="card" id="JAVA">
                 <div class="icon">
-                  <img src="./img/java.webp" alt="Java" class="img-fluid">
+                  <img src="./img/java.webp" alt="Java" class="img-fluid" loading="lazy">
                 </div>
                 <div class="Stitle">
                   <div class="card-body">
@@ -306,7 +306,7 @@
             <div class="item">
               <div class="card" id="Cm">
                 <div class="icon">
-                  <img src="./img/c.webp" alt="C++" class="img-fluid">
+                  <img src="./img/c.webp" alt="C++" class="img-fluid" loading="lazy">
                 </div>
                 <div class="Stitle">
                   <div class="card-body">
@@ -451,11 +451,9 @@
 
 <script src="JS/Multilenguage.js"></script>
 <script src="JS/Theme.js"></script>
-
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-
 <script src="jquery.min.js"></script>
 <script src="owlcarousel/owl.carousel.min.js"></script>
 
