--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <div class="home-content">
 
-      <h1 id="I" data-section="profile" data-value="name"><span>Hi, I'm Miguel Castillo</span> </h1>
+      <h1 id="I" data-section="profile" data-value="name"><span id="miguel">Hi, I'm Miguel Castillo</span> </h1>
       <div class="text-animate">
         <h3 data-section="profile" data-value="rol" id="rol">Front-End Developer</h3>
       </div>
