--- a/index.html
+++ b/index.html
@@ -412,9 +412,29 @@
               </div>
             </div>
           </div>
+          <div class="item">
+            <div class="card" id="card3">
+              <div class="card-container">
+                <div class="card-body">
+
+                  <h1 class="card-title">Cards Slider Responsive</h1>
+                  <p class="card-text" data-section="Projects" data-value="description3">Discover an impressive Responsive Card Slider. Developed using HTML, CSS, JavaScript, and SCSS, this project delivers a captivating experience across all devices. Ideal for dynamic portfolios and product presentations, this slider elevates your digital projects to the next level.</p>
+                  <div id="Spans">
+                    <span id="SpHTML"><i class='bx bxl-html5'></i>HTML</span>
+                    <span id="SpCSS"><i class='bx bxl-css3'></i>CSS</span>
+                    <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
+                    <span id="SpJavascript"><i class='bx bxl-javascript'></i>JavaScript</span>
+                  </div>
+                  <div id="Enlaces">
+                    <a href="https://responsive-card-slider.vercel.app/" class="bx-Link"><i class='bx bx-link'></i></a>
+                    <a href="https://github.com/MangelC25/Responsive-Card-Slider.git" class="bx-Git"
+                      target="_blank"><i class='bx bxl-github' ></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           
-
-
         </div>
         <div class="viewm">
           <button type="button" class="btn" id="viewmp"><a href="#" data-section="Projects" data-value="vmore" id="VWM">View More Projects</a></button>
@@ -495,11 +515,13 @@
           items: 1,
         },
         600: {
-          items: 1,
-        }
-        ,
-        1000: {
           items: 2,
+        },
+        1025: {
+          items: 3,
+        },
+        1280: {
+          items: 3,
         }
       }
     });
