--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D7L85ES4NT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D7L85ES4NT');
+</script>
+
 </head>
 
 <body>
@@ -503,6 +512,8 @@
 
 <script>
   $(document).ready(function () {
+
+
     $('.owl-carousel-1').owlCarousel({
       loop: false,
       mouseDrag: true,
@@ -562,5 +573,6 @@
 
   
 </script>
+
 
 </html>
