--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Hi, I'm Miguel Castillo, Front-End Developer">
-  <link rel="stylesheet" href="sass-css/Styles.css" />
+  <link rel="stylesheet" href="CSS/Styles.css" />
   <title>Miguel Castillo: Developer and Enginer of System</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -443,7 +443,28 @@
               </div>
             </div>
           </div>
-          
+          <div class="item">
+            <div class="card" id="card4">
+              <div class="card-container">
+                <div class="card-body">
+
+                  <h1 class="card-title">Aqua Desings</h1>
+                  <p class="card-text" data-section="Projects" data-value="description4">Welcome to Aqua Designs, where artistry meets innovation in custom pool construction. Developed with HTML, CSS, and JavaScript, this landing page showcases sleek design and seamless functionality. Aqua Designs captures the essence of luxury, turning dreams of the perfect oasis into reality.</p>
+                  <div id="Spans">
+                    <span id="SpHTML"><i class='bx bxl-html5'></i>HTML</span>
+                    <span id="SpCSS"><i class='bx bxl-css3'></i>CSS</span>
+                    <span id="SpSASS"><i class='bx bxl-sass'></i>SASS</span>
+                    <span id="SpJavascript"><i class='bx bxl-javascript'></i>JavaScript</span>
+                  </div>
+                  <div id="Enlaces">
+                    <a href="https://aquadesigns.vercel.app/" class="bx-Link"><i class='bx bx-link'></i></a>
+                    <a href="https://github.com/MangelC25/AquaDesigns.git" class="bx-Git"
+                      target="_blank"><i class='bx bxl-github' ></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="viewm">
           <button type="button" class="btn" id="viewmp"><a href="#" data-section="Projects" data-value="vmore" id="VWM">View More Projects</a></button>
