--- a/index.html
+++ b/index.html
@@ -341,6 +341,16 @@
               </div>
             </div>
           </div>
+          <div class="card" id="REACT">
+            <div class="icon">
+              <i class='bx bxl-react'></i>
+            </div>
+            <div class="Stitle">
+              <div class="card-body">
+                <h5 class="card-title">React</h5>
+              </div>
+            </div>
+          </div>
         </div>
         <h3 id="PR" data-section="Skills" data-value="Prepro">CSS PREPOCESSOR</h3>
         <div class="PREPOCESSOR">
